--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,14 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+    //retrofit2 依赖库
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+//Gson 数据解析器依赖库
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+//okhttp3 输出网络请求日志依赖库
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.41'
+
 }
 repositories {
     mavenCentral()
