--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,19 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     implementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.41'
 
+    //引入协程
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
+
+    //mplementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.1"
+    //implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.1"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation "com.squareup.okhttp3:okhttp:4.2.0"
+    implementation "com.squareup.retrofit2:retrofit:2.6.1"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.2.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.6.1"
+
 }
 repositories {
     mavenCentral()
