--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,14 @@ buildscript {
         jcenter()
         
     }
+
+ /*   plugins {
+        id 'org.jetbrains.kotlin.jvm' version '1.3.11'
+    }*/
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:3.5.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+       // classpath 'org.jetbrains.kotlin.jvm:1.3.11'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -24,6 +29,7 @@ allprojects {
         
     }
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
